--- a/vegetarian.html
+++ b/vegetarian.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merge</title>
+    <title>Lunch</title>
     <link href="menu.css" rel="stylesheet"/>
     <link href="navbar.css" rel="stylesheet"/>
 
@@ -19,7 +19,7 @@
     </ul>
 
     <div id="menu" class="container">
-        <h1>All Menus</h1>
+        <h1>Lunch Menu</h1>
     </div>
 
     <script>
@@ -29,7 +29,7 @@
       displayTheMenu();
 
       async function getTheMenu() {
-        let response = await fetch(host + "/merger");
+        let response = await fetch(host + "/menu/vegetarian");
         let menu = await response.json();
         return menu;
       }
