--- a/register.html
+++ b/register.html
@@ -8,13 +8,14 @@
         <title>Registeration</title>
     </head>
 <body>
-    <ul class="topnav">
-        <li><a  href="index.html">Home</a></li>
-        <li><a href="add.html">Add ducks</a></li>        
-        <li><a href="search.html">Search ducks</a></li>
-        <li><a href="pond.html">Pond</a></li>
-        <li class="right"><a  class="active" href="login.html">Login</a></li>
-    </ul>
+  <ul class="topnav">
+    <li><a class="active" href="index.html">All Menus</a></li>
+    <li><a href="breakfast.html">Breakfast</a></li>        
+    <li><a href="lunch.html">Lunch</a></li>
+    <li><a href="supper.html">Dinner</a></li>
+    <li><a href="vegetarian.html">Vegetarian</a></li>
+    <li class="right"><a  href="login.html">Login</a></li>
+  </ul>
 
 <form  style="border:1px solid #ccc">
   <div class="container">
